--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,61 @@ button {
       color: rgba(0, 0, 0, 0.54); }
   .send-form button {
     flex-shrink: 0; }
+
+
+.slider_volume {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider_volume:hover {
+    opacity: 1;
+}
+
+.slider_volume::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider_volume::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slidercontainer{
+    width: 100px;
+}
+
+.presets{
+width: 35%;
+}
+.presets ul li{
+    color: white;
+    line-height: 2em;
+    margin:6px;
+    padding: 7px;
+    background-color: #118181;
+    border-radius: 5px 10px 20px;
+    border: 5px solid #D5D5D5;
+}
+
+.presets ul li:hover{
+    color: black;
+    line-height: 2em;
+    margin:6px;
+    padding: 7px;
+    background-color: #50F160;
+}
+
