--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,30 @@ body {
   color: rgba(0, 0, 0, 0.87);
   font-family: 'Roboto Mono', monospace;
   font-size: 16px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+}
+
+
+.container {
+  height: 100%;
+}
+
+.container,
+.content {
+   display: flex;
+}
+.container {
+   flex-direction: column;
+}
+
+.content,
+.scrollable {
+  flex: 1;
+}
+
+.scrollable {
+  overflow: auto;
+  align: center;
+}
 
 .app {
   display: flex;
@@ -32,18 +55,40 @@ button {
   button i.material-icons {
     vertical-align: middle; }
 
+
+  .toolbar, .footer { 
+    position: fixed; ;right: 0px;left: 0px;height: 60px;
+    align-items: center;
+    display: flex;
+    flex-shrink: 0;
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px -2px 37px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px -2px 37px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px -2px 37px 0px rgba(0,0,0,0.75);
+
+ }
+
 .toolbar {
-  align-items: center;
-  display: flex;
-  flex-shrink: 0; }
-  .toolbar .name {
+  top: 0px;
+ 
+ }
+
+ .footer {
+ bottom: 0px;
+
+
+ }
+.toolbar .name {
     flex-grow: 1;
     padding: 0 8px;
-    user-select: none; }
-  .toolbar .buttons {
-    flex-shrink: 0; }
-    .toolbar .buttons button {
-      float: left; }
+    user-select: none;
+  }
+.toolbar .buttons {
+    flex-shrink: 0;
+   }
+.toolbar .buttons button {
+      float: left; 
+    }
 
 .terminal {
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -86,6 +131,7 @@ button {
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    border-radius: 4px;
 }
 
 .slider_volume:hover {
@@ -99,6 +145,7 @@ button {
     height: 25px;
     background: #4CAF50;
     cursor: pointer;
+    border-radius: 6px;
 }
 
 .slider_volume::-moz-range-thumb {
@@ -106,30 +153,78 @@ button {
     height: 25px;
     background: #4CAF50;
     cursor: pointer;
+    border-radius: 6px;
 }
 
 .slidercontainer{
-    width: 100px;
+    width: 200px;
+    margin: 2px 10px;
 }
 
-.presets{
-width: 35%;
+.presets, .tracks{
+/* width: 35%; */
 }
-.presets ul li{
-    color: white;
+.presets ul, .tracks ul {
+-webkit-padding-start: 0px !important;
+}
+.presets ul li, .tracks ul li{
     line-height: 2em;
     margin:6px;
     padding: 7px;
-    background-color: #118181;
     border-radius: 5px 10px 20px;
     border: 5px solid #D5D5D5;
+    line-height: 2em;
+    margin:6px;
+    padding: 7px;
+    list-style-type:none;
+
 }
+
+.tracks .unavailable, .presets .unavailable{
+  display: none;
+}
+
+.tracks ul li{
+  background-color: #118181;
+}
+.presets ul li{
+  background-color: #114b81;
+}
+
 
 .presets ul li:hover{
     color: black;
-    line-height: 2em;
-    margin:6px;
-    padding: 7px;
-    background-color: #50F160;
+     background-color: #50F160;
 }
 
+.tracks ul li:hover{
+  color: black;
+   background-color: rgb(80, 163, 241);
+}
+
+.control-buttons {
+display: flex;
+flex-direction: row ;
+flex-wrap: wrap ;
+}
+.control-buttons button{
+background-color: #9E9E9E;
+margin: 0px 5px 5px 0px;
+}
+
+.control-buttons button:hover{
+background-color: #4CAF50;
+
+}
+
+.battery_status{
+ 
+  
+  flex-grow: 1;
+  padding: 0 8px;
+  user-select: none;
+}
+
+.btnGroup {
+width: 100%;
+}
