--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ button i.material-icons {
 
 .terminal div {
   color: #9E9E9E;
+  font-size: 0.8em;
   line-height: 1;
   padding: 4px 8px;
   word-break: break-word;
@@ -265,6 +266,32 @@ button i.material-icons {
 
 .voltage {
 
+}
 
-
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-top: 1px solid #d4d4d4; 
+}
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+.autocomplete-active {
+  background-color: DodgerBlue !important; 
+  color: #ffffff; 
 }
